<resources>
    <string name="app_name">Bakalari mobile</string>
    <string name="bakalari">Bakalari</string>
    <string name="author">Lasta apps</string>
    <string name="author_template">Lasta apps %s</string>
    <string name="beta">beta</string>
    <string name="bottom_fragment_tag" translatable="false">bakalari.bottom_navigation</string>
    <string name="thanks_review">Thanks you for your feedback</string>
    <string name="attachment">Attachment</string>
    <string name="ok">OK</string>
    <string name="close">Close</string>
    <string name="retry">Retry</string>
    <string name="downloading">Downloading</string>
    <string name="share_message">Try this better Bakalari app as I did!</string>
    <string name="no_items">No items</string>
    <string name="role_parent">parent</string>
    <string name="role_student">student</string>
    <string name="role_teacher">teacher</string>
    <string name="role_leading">leading</string>
    <string name="role_system">system</string>
    <string name="role_oder">oder</string>
    <string name="menu_home">Home</string>
    <string name="menu_login">Login to Bakaláři</string>
    <string name="menu_timetable">Timetable</string>
    <string name="menu_marks">Marks</string>
    <string name="menu_homework">Homework</string>
    <string name="menu_events">Events</string>
    <string name="menu_absence">Absence</string>
    <string name="menu_teacher_list">Teachers</string>
    <string name="menu_subject_list">Subjects</string>
    <string name="menu_subject_info">Subject info</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_profiles_list">Change profile</string>
    <string name="menu_communicate">Communicate</string>
    <string name="menu_share">Share</string>
    <string name="menu_rate">Rate us</string>
    <string name="menu_idea">Send us an idea</string>
    <string name="menu_report">Report an issue</string>
    <string name="menu_about">About</string>
    <string name="menu_other">Other</string>
    <string name="menu_facebook">Like us on Facebook</string>
    <string name="menu_google_play">Try more apps</string>
    <string name="menu_github">See code on Github</string>
    <string name="menu_api">Bakalari API doc</string>
    <string name="menu_license">License notices</string>
    <string name="menu_open_web">Open web</string>
    <string name="menu_timetable_old">Old timetable</string>
    <string name="loading_no_internet">Cannot connect to internet</string>
    <string name="loading_failed_title">Failed to log in</string>
    <string name="loading_failed_message">No data saved yet, internet connection needed for first login</string>
    <string name="loading_failed_positive">Retry</string>
    <string name="loading_failed_negative">Continue</string>
    <string name="loading_download_default_title">Download data</string>
    <string name="loading_download_default_message">Do you want to download all the data now to save time later?
        Otherwise, you will have to do everything manually later!
        It may take a few MBs of data, so it is not recommended skipping on mobile networks. Download it on Wi-Fi.</string>
    <string name="loading_download_default_positive">Download</string>
    <string name="loading_download_default_negative">Skip</string>
    <string name="loading_download_default_done">Data downloaded!</string>
    <string name="loading_download_default_error">Error occurred</string>
    <string name="version_update_text">Migrating data from the older version</string>
    <string name="version_update_service_text">Migrating data from the older version</string>
    <string name="version_update_success">Done!</string>
    <string name="version_update_failed">Error occurred, app can behave weirdly</string>
    <string name="profile_label">Choose a profile</string>
    <string name="profile_delete_title">Are you sure?</string>
    <string name="profile_delete_message">Do you really want to delete %s? This operation cannot be undone!</string>
    <string name="profile_delete_positive">Throw it away</string>
    <string name="profile_delete_negative">Keep it</string>
    <string name="profile_help_launch_title">Auto launch profile</string>
    <string name="profile_help_launch_message">
        The selected account will be automatically logged in at the app start.
        To go back to this list, navigate from the top right hamburger menu and choose "profiles".
    </string>
    <string name="profile_help_launch_button">I understand</string>
    <string name="login_title">Login to Bakalari</string>
    <string name="login_loading_towns">Loading towns…</string>
    <string name="login_choose_town">Choose town:</string>
    <string name="login_choose_school">Choose school:</string>
    <string name="login_loading_failed">Cannot load now, try again later</string>
    <string name="login_loading">Loading towns…</string>
    <string name="login_no_town_selected">No town selected</string>
    <string name="login_no_school_selected">No school selected</string>
    <string name="login_search_nothing_found">Nothing found</string>
    <string name="login_search_select_town">Select town</string>
    <string name="login_search_select_school">Select school</string>
    <string name="login_search_select_town_hint">Town</string>
    <string name="login_search_select_school_hint">School</string>
    <string name="login_field_required">Field required</string>
    <string name="login_profile_select_image">Select new profile image</string>
    <string name="login_prompt_profile">Profile name</string>
    <string name="login_prompt_url">School\'s Bakalari URL</string>
    <string name="login_prompt_username">Username</string>
    <string name="login_prompt_password">Password</string>
    <string name="login_save_password">Save password</string>
    <string name="login_forgotten_password">Forgotten password?</string>
    <string name="login_forgotten_password_select_school">Select your school first</string>
    <string name="login_forgotten_password_title">Forgotten password</string>
    <string name="login_forgotten_password_message">Your browser will be opened with your schools Bakalari password recovery page.
        At first, you have to select your school in the login screen to open the right web page. Have you done it?</string>
    <string name="login_forgotten_password_positive">Sure, open web</string>
    <string name="login_forgotten_password_negative">Let me do it</string>
    <string name="login_button_login">Login</string>
    <string name="login_button_update">Update</string>
    <string name="login_button_cancel">Cancel</string>
    <string name="login_already_exists_profile">This profile name already exists</string>
    <string name="login_already_exists_credentials">This login credentials already used for this school</string>
    <string name="login_connecting">Connection to school server…</string>
    <string name="login_succeeded">Succeeded to login!</string>
    <string name="login_updated">Profile updated</string>
    <string name="login_failed">"Login failed, wrong username or password"</string>
    <string name="login_error_server_unavailable">Cannot connect to school server</string>
    <string name="login_error_login_internal">App failed to process login info</string>
    <string name="login_error_no_internet">No internet available of bad url was entered</string>
    <string name="login_error_wrong_input">Wrong username or password</string>
    <string name="login_error_not_enough_data">You haven\'t entered enough data</string>
    <string name="login_save_password_help_title">Save password help</string>
    <string name="login_save_password_help_message">
        Even if you disable this feature,
        the application will still have a simple data required to communicate with a server stored,
        and you will be able to work without the need to use password anymore.\n
        \n
        If you decide to save password, your password will be saved for a situation,
        that something goes wrong, and the saved login data are no longer valid.
        With the saved password it\'s easy to renew them. It\'s recommended to save the password.</string>
    <string name="login_save_password_help_button">I understand</string>
    <string name="login_services_in_channel_name">Log in</string>
    <string name="login_services_in_notification_title">Logging in…</string>
    <string name="login_services_out_channel_name">Log out</string>
    <string name="login_services_out_notification_title">Logging out…</string>
    <string name="idea_label">Send an idea</string>
    <string name="idea_email_label">Email, so I can reply you</string>
    <string name="idea_email_prompt">Email (Optional)</string>
    <string name="idea_message_label">What\'s on your mind</string>
    <string name="idea_message_prompt">Message</string>
    <string name="idea_empty">Message cannot be empty</string>
    <string name="idea_thanks">Thank you for your feedback :)</string>
    <string name="idea_overload">You can send only 1 idea per day because of server overload protection</string>
    <string name="idea_go_back">Close</string>
    <string name="idea_no_internet">Cannot connect to internet</string>
    <string name="report_label">Report an issue</string>
    <string name="report_email_label">Email, so i can reply you</string>
    <string name="report_email_prompt">Email (Optional)</string>
    <string name="report_message_label">Describe the error (English or Czech please)</string>
    <string name="report_message_prompt">Error description</string>
    <string name="report_empty">Report cannot be empty</string>
    <string name="report_thanks">Thank you for your feedback :)</string>
    <string name="report_overload">You can report only 1 issue per day because of server overload protection</string>
    <string name="report_no_internet">Cannot connect to internet</string>
    <string name="report_data_collected">App will send some data to diagnose the issue, namely school\'s url, name, town and Bakalari version, account type(parent, pupil, teacher), android version, phone type, app version and phone\'s id</string>
    <string name="report_go_back">Close</string>
    <string name="report_include_timetable">Include timetables</string>
    <string name="report_include_timetable_warning">Contains your timetable with names removed</string>
    <string name="report_include_marks">Include marks</string>
    <string name="report_include_marks_warning">Contains marks and subjects info</string>
    <string name="report_include_homework">Include homework list</string>
    <string name="report_include_homework_warning">Contains homework\'s tasks, states and dates</string>
    <string name="report_include_subject">Include subject list</string>
    <string name="report_include_subject_warning">Contains subjects and teachers info without names</string>
    <string name="about_thanks">I want to thank all the people who created documentation of Bakalari API on Github.
        Without them, you wouldn\'t be reading this message now. The source api is below. Thank you very much!</string>
    <string name="about_follow">Feel free to follow me, share or check source code</string>
    <string name="license">License</string>
    <string name="license_notices">License notices</string>
    <string name="license_agree">Agree</string>
    <string name="license_view">View license</string>
    <string name="absence_legend">Legend</string>
    <string name="absence_unsolved">Unsolved absence</string>
    <string name="absence_ok">Excused absence</string>
    <string name="absence_missed">Missed lesson</string>
    <string name="absence_late">Late arrival</string>
    <string name="absence_soon">Soon arrival</string>
    <string name="absence_school">School event</string>
</resources>