<?xml version="1.0" encoding="utf-8"?><!--
  ~    Copyright 2020, Petr Laštovička as Lasta apps, All rights reserved
  ~
  ~     This file is part of Bakalari extension.
  ~
  ~     Bakalari extension is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation, either version 3 of the License, or
  ~     (at your option) any later version.
  ~
  ~     Bakalari extension is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License
  ~     along with Bakalari extension.  If not, see <https://www.gnu.org/licenses/>.
  ~
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/nav_items_group"
        android:checkableBehavior="single"
        android:orderInCategory="0" />

    <item
        android:id="@+id/nav_settings"
        android:checkable="false"
        android:icon="@drawable/nav_settings"
        android:orderInCategory="20"
        android:title="@string/menu_settings" />
    <item
        android:id="@+id/nav_logout"
        android:checkable="false"
        android:icon="@drawable/nav_logout"
        android:orderInCategory="21"
        android:title="@string/menu_logout" />
    <item
        android:id="@+id/nav_about"
        android:icon="@drawable/nav_about"
        android:orderInCategory="22"
        android:title="@string/menu_about" />

    <item
        android:orderInCategory="30"
        android:title="@string/menu_communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/nav_share"
                android:orderInCategory="30"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_rate"
                android:icon="@drawable/nav_rate"
                android:orderInCategory="31"
                android:title="@string/menu_rate" />
            <item
                android:id="@+id/nav_idea"
                android:icon="@drawable/nav_idea"
                android:orderInCategory="32"
                android:title="@string/menu_idea" />
            <item
                android:id="@+id/nav_report"
                android:icon="@drawable/nav_report"
                android:orderInCategory="33"
                android:title="@string/menu_report" />
        </menu>
    </item>

    <item
        android:orderInCategory="40"
        android:title="@string/menu_oder">
        <menu>
            <item
                android:id="@+id/nav_facebook"
                android:icon="@drawable/nav_facebook"
                android:orderInCategory="40"
                android:title="@string/menu_facebook" />
            <item
                android:id="@+id/nav_google_play"
                android:icon="@drawable/nav_google_play"
                android:orderInCategory="41"
                android:title="@string/menu_google_play" />
            <item
                android:id="@+id/nav_github"
                android:icon="@drawable/nav_github"
                android:orderInCategory="42"
                android:title="@string/menu_github" />
            <item
                android:id="@+id/nav_api"
                android:icon="@drawable/nav_api"
                android:orderInCategory="43"
                android:title="@string/menu_api" />
            <item
                android:id="@+id/nav_license"
                android:icon="@drawable/nav_license"
                android:orderInCategory="44"
                android:title="@string/menu_license" />
        </menu>
    </item>
</menu>
