<?xml version="1.0" encoding="utf-8"?>
<!--
  ~    Copyright 2020, Petr Laštovička as Lasta apps, All rights reserved
  ~
  ~     This file is part of Bakalari extension.
  ~
  ~     Bakalari extension is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation, either version 3 of the License, or
  ~     (at your option) any later version.
  ~
  ~     Bakalari extension is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License
  ~     along with Bakalari extension.  If not, see <https://www.gnu.org/licenses/>.
  ~
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        style="@style/AppTheme">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/idea_margin"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/report_fab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/idea_margin"
                    app:backgroundTint="@color/colorAccent"
                    app:srcCompat="@drawable/nav_idea"

                    android:layout_alignParentEnd="true"
                    android:layout_alignParentTop="true" />

                <TextView
                    style="@style/AppTheme.Heading"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/report_label"

                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_toStartOf="@id/report_fab" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/emailbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_toStartOf="@id/github_fab">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/idea_margin"
                        android:text="@string/report_email_label" />

                    <EditText
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/idea_margin"
                        android:hint="@string/report_email_prompt"
                        android:inputType="textEmailAddress" />
                </LinearLayout>

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/github_fab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_margin="@dimen/idea_margin"

                    app:backgroundTint="@color/github_background"
                    app:srcCompat="@drawable/github" />

            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/idea_margin"
                android:text="@string/report_message_label" />

            <EditText
                android:id="@+id/message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/idea_margin"
                android:hint="@string/report_message_prompt"
                android:inputType="textLongMessage|textAutoCorrect|textMultiLine|text|textAutoComplete|textImeMultiLine" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/report_data_collected" />

            <CheckBox
                android:id="@+id/include_timetable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/report_include_timetable"
                android:layout_margin="@dimen/margin_basic" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/report_include_timetable_warning"
                android:paddingStart="@dimen/report_warning_margin"
                android:paddingEnd="@dimen/report_warning_margin" />

            <CheckBox
                android:id="@+id/include_marks"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/report_include_marks"
                android:layout_margin="@dimen/margin_basic" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/report_include_marks_warning"
                android:paddingStart="@dimen/report_warning_margin"
                android:paddingEnd="@dimen/report_warning_margin" />

            <CheckBox
                android:id="@+id/include_homework"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/report_include_homework"
                android:layout_margin="@dimen/margin_basic" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/report_include_homework_warning"
                android:paddingStart="@dimen/report_warning_margin"
                android:paddingEnd="@dimen/report_warning_margin" />

            <CheckBox
                android:id="@+id/include_subject"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/report_include_subject"
                android:layout_margin="@dimen/margin_basic" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/report_include_subject_warning"
                android:paddingStart="@dimen/report_warning_margin"
                android:paddingEnd="@dimen/report_warning_margin" />


        </LinearLayout>

    </ScrollView>
</layout>