<?xml version="1.0" encoding="utf-8"?><!--
  ~    Copyright 2020, Petr Laštovička as Lasta apps, All rights reserved
  ~
  ~     This file is part of Bakalari extension.
  ~
  ~     Bakalari extension is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation, either version 3 of the License, or
  ~     (at your option) any later version.
  ~
  ~     Bakalari extension is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License
  ~     along with Bakalari extension.  If not, see <https://www.gnu.org/licenses/>.
  ~
  -->

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_basic"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal">

        <TextView
            style="@style/AppTheme.Heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_basic"
            android:layout_gravity="center"
            android:text="@string/absence_legend" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                style="@style/Absence.Day.Icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/absence_unsolved"
                app:srcCompat="@drawable/absence_unsolved" />

            <TextView
                style="@style/AppTheme.Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/absence_unsolved" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                style="@style/Absence.Day.Icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/absence_ok"
                app:srcCompat="@drawable/absence_ok" />

            <TextView
                style="@style/AppTheme.Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/absence_ok" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                style="@style/Absence.Day.Icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/absence_missed"
                app:srcCompat="@drawable/absence_missed" />

            <TextView
                style="@style/AppTheme.Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/absence_missed" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                style="@style/Absence.Day.Icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/absence_late"
                app:srcCompat="@drawable/absence_late" />

            <TextView
                style="@style/AppTheme.Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/absence_late" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                style="@style/Absence.Day.Icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/absence_soon"
                app:srcCompat="@drawable/absence_soon" />

            <TextView
                style="@style/AppTheme.Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/absence_soon" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                style="@style/Absence.Day.Icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/absence_school"
                app:srcCompat="@drawable/absence_school" />

            <TextView
                style="@style/AppTheme.Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/absence_school" />
        </LinearLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="@dimen/bottom_sheet_bottom_margin" />

    </LinearLayout>
</FrameLayout>